ajustes de links relativos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>DoctoCare</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -257,7 +257,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/assents/mulher-negra-de-casaco-verde-com-as-mãos-no-peito-e-sorrindo.png"
+            src="./assents/mulher-negra-de-casaco-verde-com-as-mãos-no-peito-e-sorrindo.png"
             alt="Mulher negra vestindo moletom verde e sorrindo"
           />
         </div>
@@ -467,7 +467,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/assents/médico-feliz-segurando-uma-prancheta-com-uma-mãe-e-o-filho-no-consultório.png"
+            src="./assents/médico-feliz-segurando-uma-prancheta-com-uma-mãe-e-o-filho-no-consultório.png"
             alt="Doutor feliz segurando prancheta com pacientes"
           />
         </div>
@@ -558,7 +558,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/assents/homem-negro-vestindo-moletom-bege-segurando-um-celular-e-sorrindo-numa-sala-de-estar.png"
+            src="./assents/homem-negro-vestindo-moletom-bege-segurando-um-celular-e-sorrindo-numa-sala-de-estar.png"
             alt="Homem negro vestindo moletom bege segurando um celular e sorrindo numa sala de estar"
           />
         </div>
@@ -738,6 +738,6 @@
 
     <!-- ScrollReaveal Lib -->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
